--- a/tests/integration/targets/podman_container_idempotency/tasks/idem_all.yml
+++ b/tests/integration/targets/podman_container_idempotency/tasks/idem_all.yml
@@ -4,6 +4,7 @@
     executable: "{{ test_executable | default('podman') }}"
     name: idempotency
     state: absent
+    podman_socket: "{{ podman_socket | default(omit) }}"
 
 - name: Run container
   containers.podman.podman_container:
@@ -12,6 +13,7 @@
     name: idempotency
     state: started
     command: 1h
+    podman_socket: "{{ podman_socket | default(omit) }}"
 
 - name: Run container again
   containers.podman.podman_container:
@@ -20,6 +22,7 @@
     name: idempotency
     state: present
     command: 1h
+    podman_socket: "{{ podman_socket | default(omit) }}"
   register: test1
 
 - name: Check info when running container again
@@ -74,6 +77,7 @@
       mykey: "amazing value"
       ENV1: "one=two=three"
     command: 1h
+    podman_socket: "{{ podman_socket | default(omit) }}"
   register: test2
 
 - name: Check info with environment vars
@@ -90,6 +94,7 @@
       mykey: "amazing value"
       ENV1: "one=two=three"
     command: 1h
+    podman_socket: "{{ podman_socket | default(omit) }}"
   register: test3
 
 - name: Check info with environment vars again
@@ -106,6 +111,7 @@
       mykey: "amazing value1"
       ENV1: "one=two=three"
     command: 1h
+    podman_socket: "{{ podman_socket | default(omit) }}"
   register: test4
 
 - name: Check info with changed environment vars
@@ -122,6 +128,7 @@
       tag: nonotag
     log_driver: journald
     command: 1h
+    podman_socket: "{{ podman_socket | default(omit) }}"
   register: test9
 
 - name: Check info with log opt tag
@@ -138,6 +145,7 @@
       tag: nonotag
     log_driver: journald
     command: 1h
+    podman_socket: "{{ podman_socket | default(omit) }}"
   register: test10
 
 - name: Check info with log opt tag - again
@@ -152,6 +160,7 @@
     state: present
     command: 1h
     log_driver: journald
+    podman_socket: "{{ podman_socket | default(omit) }}"
   register: test11
 
 - name: Check info with default log opt tag
@@ -168,6 +177,7 @@
       path: /tmp/container.log
     log_driver: journald
     command: 1h
+    podman_socket: "{{ podman_socket | default(omit) }}"
   register: test12
 
 - name: Check info with log opt path
@@ -184,6 +194,7 @@
       path: /tmp/container2.log
     log_driver: journald
     command: 1h
+    podman_socket: "{{ podman_socket | default(omit) }}"
   register: test13
 
 - name: Check info with changed log opt path
@@ -198,6 +209,7 @@
     state: present
     log_driver: journald
     command: 1h
+    podman_socket: "{{ podman_socket | default(omit) }}"
   register: test14
 
 - name: Check info with default log opt path
@@ -216,6 +228,7 @@
       max_size: 100mb
       tag: sometag
     command: 1h
+    podman_socket: "{{ podman_socket | default(omit) }}"
 
 - name: Run container with mounted /dev/fuse
   containers.podman.podman_container:
@@ -226,6 +239,7 @@
     command: 1h
     device:
       - /dev/fuse
+    podman_socket: "{{ podman_socket | default(omit) }}"
   register: test15
 
 - name: Run container with mounted /dev/fuse again
@@ -237,6 +251,7 @@
     command: 1h
     device:
       - /dev/fuse
+    podman_socket: "{{ podman_socket | default(omit) }}"
   register: test16
 
 - name: Run container with mounted /dev/fuse:/dev/fuse
@@ -248,6 +263,7 @@
     command: 1h
     device:
       - /dev/fuse:/dev/fuse
+    podman_socket: "{{ podman_socket | default(omit) }}"
   register: test17
 
 - name: Run container with mounted /dev/fuse third time
@@ -259,6 +275,7 @@
     command: 1h
     device:
       - /dev/fuse
+    podman_socket: "{{ podman_socket | default(omit) }}"
   register: test18
 
 - name: Run container without mounted device
@@ -268,6 +285,7 @@
     name: idempotency
     state: started
     command: 1h
+    podman_socket: "{{ podman_socket | default(omit) }}"
   register: test19
 
 - name: Check info with mounted devices
@@ -289,6 +307,7 @@
       host1: 127.0.0.1
       host2: fd00::1
     command: 1h
+    podman_socket: "{{ podman_socket | default(omit) }}"
   register: test20
 
 - name: Check info with etc_hosts
@@ -305,6 +324,7 @@
       host1: 127.0.0.1
       host2: fd00::1
     command: 1h
+    podman_socket: "{{ podman_socket | default(omit) }}"
   register: test21
 
 - name: Check info with etc_hosts again
@@ -317,6 +337,7 @@
     image: "{{ idem_image }}"
     name: idempotency
     state: present
+    podman_socket: "{{ podman_socket | default(omit) }}"
 
 - name: Run container with restart policy always
   containers.podman.podman_container:
@@ -325,6 +346,7 @@
     name: idempotency
     state: present
     restart_policy: always
+    podman_socket: "{{ podman_socket | default(omit) }}"
   register: test22
 
 - name: Check info with restart policy always
@@ -338,6 +360,7 @@
     name: idempotency
     state: present
     restart_policy: always
+    podman_socket: "{{ podman_socket | default(omit) }}"
   register: test23
 
 - name: Check info with restart policy always again
@@ -351,6 +374,7 @@
     name: idempotency
     state: present
     restart_policy: on-failure
+    podman_socket: "{{ podman_socket | default(omit) }}"
   register: test24
 
 - name: Check info with restart policy on-failure
@@ -363,6 +387,7 @@
     image: "{{ idem_image }}"
     name: idempotency
     state: present
+    podman_socket: "{{ podman_socket | default(omit) }}"
   register: test25
 
 - name: Check info w/o restart policy
@@ -375,6 +400,7 @@
     image: "{{ idem_image }}"
     name: idempotency
     state: present
+    podman_socket: "{{ podman_socket | default(omit) }}"
   register: test26
 
 - name: Check info with PID
@@ -388,6 +414,7 @@
     name: idempotency2
     state: present
     pid: "container:idempotency"
+    podman_socket: "{{ podman_socket | default(omit) }}"
   register: test27
 
 - name: Check info of second container with PID
@@ -401,6 +428,7 @@
     name: idempotency2
     state: present
     pid: "container:idempotency"
+    podman_socket: "{{ podman_socket | default(omit) }}"
   register: test28
 
 - name: Check info of second container with PID again
@@ -414,6 +442,7 @@
     name: idempotency2
     state: present
     pid: "container:{{ test26.container.Id }}"
+    podman_socket: "{{ podman_socket | default(omit) }}"
   register: test29
 
 - name: Check info of second container with PID of container ID again
@@ -590,9 +619,11 @@
     executable: "{{ test_executable | default('podman') }}"
     name: idempotency2
     state: absent
+    podman_socket: "{{ podman_socket | default(omit) }}"
 
 - name: Remove test container
   containers.podman.podman_container:
     executable: "{{ test_executable | default('podman') }}"
     name: idempotency
     state: absent
+    podman_socket: "{{ podman_socket | default(omit) }}"
