--- a/tests/integration/targets/podman_container_idempotency/tasks/idem_ports.yml
+++ b/tests/integration/targets/podman_container_idempotency/tasks/idem_ports.yml
@@ -3,6 +3,7 @@
     executable: "{{ test_executable | default('podman') }}"
     name: idempotency
     state: absent
+    podman_socket: "{{ podman_socket | default(omit) }}"
 
 - containers.podman.podman_container:
     executable: "{{ test_executable | default('podman') }}"
@@ -10,6 +11,7 @@
     name: idempotency
     state: started
     command: 1h
+    podman_socket: "{{ podman_socket | default(omit) }}"
 
 - containers.podman.podman_container:
     executable: "{{ test_executable | default('podman') }}"
@@ -17,6 +19,7 @@
     name: idempotency
     state: present
     command: 1h
+    podman_socket: "{{ podman_socket | default(omit) }}"
   register: test1
 
 - name: check test1
@@ -45,6 +48,7 @@
       - 0.0.0.0:20000-20010:20000-20010/tcp
       - "10000-10010:10000-10010/udp"
       - "[::1]:3001-3003:3001-3003"
+    podman_socket: "{{ podman_socket | default(omit) }}"
   register: test2
 
 - name: check test2
@@ -73,6 +77,7 @@
       - 0.0.0.0:20000-20010:20000-20010/tcp
       - "10000-10010:10000-10010/udp"
       - "[::1]:3001-3003:3001-3003"
+    podman_socket: "{{ podman_socket | default(omit) }}"
   register: test3
 
 - name: check test3
@@ -86,6 +91,7 @@
     state: present
     publish_all: true
     command: 1h
+    podman_socket: "{{ podman_socket | default(omit) }}"
   register: test4
 
 - name: check test4
@@ -99,6 +105,7 @@
     state: present
     publish_all: true
     command: 1h
+    podman_socket: "{{ podman_socket | default(omit) }}"
   register: test5
 
 - name: check test5
@@ -111,6 +118,7 @@
     name: idempotency
     state: present
     command: 1h
+    podman_socket: "{{ podman_socket | default(omit) }}"
   register: test6
 
 - name: check test6
@@ -125,6 +133,7 @@
     ports:
       - 10000:8080
     command: 1h
+    podman_socket: "{{ podman_socket | default(omit) }}"
   register: test7
 
 - name: check test7
@@ -139,6 +148,7 @@
     ports:
       - 10001:8080
     command: 1h
+    podman_socket: "{{ podman_socket | default(omit) }}"
   register: test8
 
 - name: check test8
@@ -153,6 +163,7 @@
     ports:
       - 10001:8080/tcp
     command: 1h
+    podman_socket: "{{ podman_socket | default(omit) }}"
   register: test9
 
 - name: check test9
@@ -168,6 +179,7 @@
       - 10001:8080/tcp
     publish_all: false
     command: 1h
+    podman_socket: "{{ podman_socket | default(omit) }}"
   register: test9a
 
 - name: check test9a
@@ -180,6 +192,7 @@
     name: idempotency
     state: present
     command: 1h
+    podman_socket: "{{ podman_socket | default(omit) }}"
   register: test9b
 
 - name: check test9b
@@ -190,6 +203,7 @@
     executable: "{{ test_executable | default('podman') }}"
     name: idempotency1
     state: absent
+    podman_socket: "{{ podman_socket | default(omit) }}"
 
 - containers.podman.podman_container:
     executable: "{{ test_executable | default('podman') }}"
@@ -197,6 +211,7 @@
     name: idempotency1
     state: present
     command: sleep 1h
+    podman_socket: "{{ podman_socket | default(omit) }}"
 
 - containers.podman.podman_container:
     executable: "{{ test_executable | default('podman') }}"
@@ -204,6 +219,7 @@
     name: idempotency1
     state: present
     command: sleep 1h
+    podman_socket: "{{ podman_socket | default(omit) }}"
   register: test10
 
 - name: check test10
@@ -217,6 +233,7 @@
     state: present
     publish_all: false
     command: sleep 1h
+    podman_socket: "{{ podman_socket | default(omit) }}"
   register: test11
 
 - name: check test11
@@ -230,6 +247,7 @@
     state: present
     publish_all: true
     command: sleep 1h
+    podman_socket: "{{ podman_socket | default(omit) }}"
   register: test11a
 
 - name: check test11a
@@ -244,6 +262,7 @@
     ports:
       - 10000:8080
     command: sleep 1h
+    podman_socket: "{{ podman_socket | default(omit) }}"
   register: test12
 
 - name: check test12
@@ -256,6 +275,7 @@
     name: idempotency1
     state: present
     command: sleep 1h
+    podman_socket: "{{ podman_socket | default(omit) }}"
   register: test13
 
 - name: check test13
@@ -268,6 +288,7 @@
     name: idempotency1
     state: present
     command: sleep 1h
+    podman_socket: "{{ podman_socket | default(omit) }}"
   register: test14
 
 - name: check test14
