--- a/changelogs/changelog.yaml
+++ b/changelogs/changelog.yaml
@@ -242,3 +242,22 @@ releases:
       name: podman_login
       namespace: ''
     release_date: '2021-04-05'
+  1.6.0:
+    changes:
+      bugfixes:
+      - Fix ansible-test issues for CI
+      - Fix idempotency for environment
+      - Fix ipv6=false issue
+      - Fix multi-containers options
+      - Fix overlayfs issue in CI for buildah connection
+      minor_changes:
+      - Add Ansible 2.11 to all tests and use Ubuntu 20.04
+      - Add Ansible 2.11 to testing
+      - Add RPM building scripts
+      - Add support for timezones in containers
+      release_summary: New module podman_play for playing Kubernetes YAML and bugfixes
+    modules:
+    - description: Play Kubernetes YAML files with Podman
+      name: podman_play
+      namespace: ''
+    release_date: '2021-06-03'
